Fixed an issue when clicking on a time button and styled the cards for visibility

--- a/public/css/time_zone_info.css
+++ b/public/css/time_zone_info.css
@@ -1,6 +1,35 @@
-.detail-cities {
+.detailed {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
+}
+
+.detailed .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  width: 128px;
+  height: 128px;
+  background: red;
+}
+
+.detailed .card .header {
+  margin: 0;
+  padding: 0;
+  width: 128px;
+  height: 96px;
+  background: red;
+}
+
+.detailed .card .body {
+  margin: 0;
+  padding: 0;
+  width: 128px;
+  height: 32px;
+  background: red;
 }
